--- a/turquoise-mocks/project.json
+++ b/turquoise-mocks/project.json
@@ -13,6 +13,15 @@
     },
 
   "frameworks": {
-    "net451": { }
+    "net451": { },
+    "dotnet5.4": {
+      "dependencies": {
+        "System.Collections": "4.0.11-beta-23516",
+        "System.Linq": "4.0.1-beta-23516",
+        "System.Runtime": "4.0.21-beta-23516",
+        "System.Threading": "4.0.11-beta-23516",
+        "System.Console": "4.0.0-beta-23516"
+      }
+    }
   }
 }
