--- a/turquoise/project.json
+++ b/turquoise/project.json
@@ -13,8 +13,19 @@
     "defaultNamespace": "Turquoise"
   },
   "frameworks": {
-    "net451": {}
+    "net451": {},
+    "dotnet5.4": {
+      "dependencies": {
+        "Microsoft.CSharp": "4.0.1-beta-23516",
+        "System.Collections": "4.0.11-beta-23516",
+        "System.Linq": "4.0.1-beta-23516",
+        "System.Runtime": "4.0.21-beta-23516",
+        "System.Threading": "4.0.11-beta-23516",
+        "System.Console": "4.0.0-beta-23516"
+      }
+    }
   },
   "dependencies": {
+    "System.Reflection": "4.1.0-beta-23516"
   }
 }
