--- a/turquoise/project.json
+++ b/turquoise/project.json
@@ -26,6 +26,7 @@
     }
   },
   "dependencies": {
-    "System.Reflection": "4.1.0-beta-23516"
+    "System.Reflection": "4.1.0-beta-23516",
+    "Newtonsoft.Json": "8.0.2"
   }
 }
